[gd_scene load_steps=9 format=2]

[ext_resource path="res://entities/enemies/Robot.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/enemies/robosheet.png" type="Texture" id=2]
[ext_resource path="res://entities/Proyectile.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.25284, 39.6314 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15.8121, 31.2732 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5.33102, 10 )

[sub_resource type="CircleShape2D" id=4]
radius = 257.139

[sub_resource type="CircleShape2D" id=5]
radius = 235.272

[node name="Robot" type="StaticBody2D"]
position = Vector2( 7.56806, 5.88628 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
projectile_scene = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 10
vframes = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4.96257, 2.1202 )
shape = SubResource( 1 )

[node name="HitArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
position = Vector2( 3.13049, 9.739 )
shape = SubResource( 2 )

[node name="HeadArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeadArea"]
position = Vector2( 3.76269, -28.9849 )
shape = SubResource( 3 )

[node name="DetectionAreaRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionAreaRight"]
position = Vector2( 288.19, 0.674976 )
shape = SubResource( 4 )

[node name="DetectionAreaLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionAreaLeft"]
position = Vector2( -259.118, -1.56768 )
shape = SubResource( 5 )

[node name="FireTimer" type="Timer" parent="."]
wait_time = 0.35
one_shot = true

[node name="FirePosition" type="Position2D" parent="."]
position = Vector2( 3.66026, -29.9194 )

[node name="PositionTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="HitArea" to="." method="_on_HitArea_body_entered"]
[connection signal="body_entered" from="HeadArea" to="." method="_on_HeadArea_body_entered"]
[connection signal="body_entered" from="DetectionAreaRight" to="." method="_on_DetectionAreaRight_body_entered"]
[connection signal="body_exited" from="DetectionAreaRight" to="." method="_on_DetectionAreaRight_body_exited"]
[connection signal="body_entered" from="DetectionAreaLeft" to="." method="_on_DetectionAreaLeft_body_entered"]
[connection signal="body_exited" from="DetectionAreaLeft" to="." method="_on_DetectionAreaLeft_body_exited"]
[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
[connection signal="timeout" from="PositionTimer" to="." method="_on_Position_timeout"]
